# SoLAr-V2-reco

./: .gitignore  Analysis.ipynb  Light_Charge_match.ipynb  MyParameters.json  README.md  Reconstruction.ipynb  SoLAr-Ana.ipynb  SoLAr-MC.ipynb  SoLAr-Reco.ipynb  SoLAr.ipynb  SoLAr_Full.ipynb  SoLAr_methods.py  SoLAr_params.py  SoLAr_temp.py  analysis.py  batch_example.sh  charge_df_20230706_191437.bz2  condense_metrics.py  display_events.py  lifetime.py  light_df_20230706_191437.bz2  metrics_to_root.py  pkl_to_root.py  pyproject.toml  reconstruction.py  requirements.txt  setup_lxplus.sh  sipm_sn_ch_to_xy.json
0218622392/: reconstruction_parameters_0218622392.json
0485521181/: charge_df_0485521181.bz2
0485521181_DA/: charge_df_0485521181_DA.bz2  metrics_0485521181_DA.pkl
0862738112/: charge_df_0862738112.bz2
0862738112_DA/: charge_df_0862738112_DA.bz2  metrics_0862738112_DA.pkl
1103896512/: charge_df_1103896512.bz2
1103896512_DA/: metrics_1103896512_DA.pkl
1224088183/: charge_df_1224088183.bz2
1224088183_DA/: metrics_1224088183_DA.pkl
1317833022/: charge_df_1317833022.bz2
1317833022_DA/: metrics_1317833022_DA.pkl
1438193072/: charge_df_1438193072.bz2
1438193072_DA/: charge_df_1438193072_DA.bz2  metrics_1438193072_DA.pkl
1830112346/: charge_df_1830112346.bz2
1830112346_DA/: metrics_1830112346_DA.pkl
20230706_191437/: analysis_parameters_20230706_191437.json  charge_df_20230706_191437.bz2  light_df_20230706_191437.bz2  match_dict_20230706_191437.json  reconstruction_parameters_20230706_191437.json
20230706_192439/: filter_parameters_1111.json  (+5 more)
(+204 files in other folders)
